force-app/main/default/objects/Visit__c/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <formula>IF( ISNULL(Check_Out_Time__c), &quot;&quot;,
    IF( FLOOR((Check_Out_Time__c - Check_In_Time__c) * 24) = 0, 
							   &quot;&quot;, 
							   TEXT(FLOOR((Check_Out_Time__c - Check_In_Time__c) * 24)) &amp; &quot; Hours &quot;) 
			 &amp; 
    IF( ROUND(MOD((Check_Out_Time__c - Check_In_Time__c) * 24 * 60, 60), 0) = 0, 
							   &quot;&quot;, 
							   TEXT(ROUND(MOD((Check_Out_Time__c - Check_In_Time__c) * 24 * 60, 60), 0)) &amp; &quot; Minutes&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration</label>
    <type>Text</type>
</CustomField>