force-app/main/default/objects/Visit__c/fields/Check_in_Locations__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Locations__c</fullName>
    <label>Check-in Location</label>
    <type>TextArea</type>
</CustomField>