force-app/main/default/objects/Visit__c/fields/Check_out_Locations__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Locations__c</fullName>
    <label>Check-out Location</label>
    <type>TextArea</type>
</CustomField>