force-app/main/default/objects/Visit__c/fields/Duration_Violation__c.field-meta.xml
<CustomField>
    <fullName>Duration_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duration Violation</label>
    <type>Checkbox</type>
</CustomField>