force-app/main/default/objects/Visit__c/fields/Geo_Violation__c.field-meta.xml
<CustomField>
    <fullName>Geo_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo Violation</label>
    <type>Checkbox</type>
</CustomField>