force-app/main/default/objects/Visit__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <formula>ISPICKVAL(Visit_Status__c, &quot;Completed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>