force-app/main/default/objects/Visit__c/fields/Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Reason__c</fullName>
    <label>Missed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outlet Closed</fullName>
            </value>
            <value>
                <fullName>Owner Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>