force-app/main/default/objects/Visit__c/fields/Missed_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Missed_Remarks__c</fullName>
    <label>Missed Remarks</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>