force-app/main/default/objects/Visit__c/fields/Planned_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Time__c</fullName>
    <label>Planned End Time</label>
    <type>DateTime</type>
</CustomField>