force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beat__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Outlet1__c</columns>
    <columns>Visit_Status__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>